--- a/templates/_job_fields.html
+++ b/templates/_job_fields.html
@@ -4,26 +4,30 @@
 
     {% if not hide_date_fields %}
         <div class="form-group">
-            <label for="start_date">Start Date:</label>
+            <label for="start_date">Start Date</label>
             <input type="date" name="start_date" id="start_date" required>
         </div>
         <div class="form-group">
-            <label for="end_date">End Date (optional):</label>
+            <label for="end_date">End Date (optional)</label>
             <input type="date" name="end_date" id="end_date">
         </div>
     {% else %}
         <div class="form-group">
-            <label for="start_date">Start Date:</label>
+            <label for="start_date">Start Date</label>
             <input type="date" name="start_date" id="start_date" required value="{{ date.isoformat() }}">
         </div>
         <div class="form-group">
-            <label for="end_date">End Date:</label>
+            <label for="end_date">End Date</label>
             <input type="date" name="end_date" id="end_date" required value="{{ date.isoformat() }}">
         </div>
     {% endif %}
         <div class="form-group">
-            <label for="time_range">Time (optional):</label>
-            <input type="text" name="time_range" id="time_range" placeholder="e.g. 9:30 or 10-12 or AM">
+            <label for="start_time">Start Time (optional)</label>
+            <input type="time" name="start_time" id="start_time" value="{{ (job.start_time if job is defined else '') }}"
+        </div>
+        <div class="form-group">
+            <label for="end_time">End Time (opional)</label>
+            <input type="time" name="end_time" id="end_time" value="{{ (job.end_time if job is defined else '') }}">
         </div>
 
         <div class="form-group">
