--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -5,33 +5,34 @@
 <form method="POST" class="form-container">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <div class="form-group">
-        <label for="title">Title:</label>
+        <label for="title">Title</label>
         <input name="title" value="{{ job['title'] }}" required>
     </div>
 
     <div class="form-group">
-        <label for="type">Type:</label>
+        <label for="type">Type</label>
         <input name="type" value="{{ job['type'] }}">
     </div>
 
     <div class="form-group">
-        <label for="price">Price:</label>
+        <label for="price">Price</label>
         <input name="price" type="number" step="0.01" value="{{ job['price'] }}">
     </div>
 
-    <div class="form-group">
-        <label for="time_range">Time:</label>
-    <input name="time_range" value="{{ job['time_range'] }}">
-    </div>
+    <label for="start_time">Start Time</label>
+    <input type="time" name="start_time" id="start_time" value="{{ job.start_time or  '' }}">
+
+    <label for="end_time">End Time</label>
+    <input type="time" name="end_time" id="end_time" value="{{ job.end_time or '' }}">
 
     <div class="form-group">
-        <label for="notes">Notes:</label>
+        <label for="notes">Notes</label>
         <textarea name="notes">{{ job['notes'] }}</textarea>
     </div>
 
 <!-- Fumigation Options -->
     <div id="fumigation-options" class="form-group hidden mt-1">
-        <label><strong>Fumigation Type:</strong></label>
+        <label><strong>Fumigation Type</strong></label>
         <input type="radio" name="fumigation_type" value="Tape and Seal" id="fum_type_tape"
             {% if job.fumigation_type == "Tape and Seal" %}checked{% endif %}>
         <label for="fum_type_tape">Tape and Seal</label><br>
