--- a/static/style.css
+++ b/static/style.css
@@ -566,10 +566,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     pointer-events: none;
 }
 
-.calendar-cell.holiday .holiday-label {
-    color: #c66;
-    font-size: 0.8em;
-    font-style: italic;
+.calendar-cell.holiday .holiday-badge {
+    display: inline-block;
+    margin-left: 4px;
+    padding: 2px 4px;
+    font-size: 0.65em;
+    font-weight: bold;
+    background-color: #d9534f;
+    color: #fff;
+    border-radius: 3px;
+    vertical-align: middle;
+    line-height: 1;
+    white-space: nowrap;
 }
 
 .calendar-cell.locked {
