fix(assignments): support "Two Man Job" in create/edit routes
- add _parse_technician() to interpret __BOTH__ sentinel
- add jobs.two_man handling in add_job/add_job_for_date/edit_job
- fix SQL in add_job_for_date (removed trailing comma)
- ensure technician_id=NULL when two_man=1

Closes: BUG-1020

--- a/templates/_job_fields.html
+++ b/templates/_job_fields.html
@@ -37,6 +37,7 @@
                 {% for t in technicians %}
                     <option value="{{ t.id }}"> {{ t.name }}</option>
                 {% endfor %}
+                <option value="__BOTH__">Two Man</option>
             </select>
         </div>
 </div>
