--- a/templates/base.html
+++ b/templates/base.html
@@ -33,10 +33,14 @@
             {% endif %}
         {% endwith %}
 
-        <!-- Page-specific content goes here -->
-        {% block content %}
-        <p class="version-number">v{{ app_version }}</p>
-        {% endblock %}
+    <!-- Page content -->
+    {% block body%}
+        {% block content %}{% endblock %}
+    {% endblock %}
+
+    <!-- Footer -->
+    {% include "_footer.html" %}
+
     </div>
 
 </body>
